manifests/jovian-prod/homarr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr-service
  namespace: jovian-prod
spec:
  selector:
    app: homarr
  ports:
    - port: 7575
      targetPort: homarr-http
      protocol: TCP
      name: homarr-http
